2011-06-27  Alexandru Chiculita  <achicu@adobe.com>

        Reviewed by Ojan Vafai.

        css combinator "+" in combination with NAV tag is buggy
        https://bugs.webkit.org/show_bug.cgi?id=47971

        Added a new state in css/tokenizer.flex for the "nth" rule. The state begins
        at nth-*( functions and ends at the first ")". It avoids parsing selectors 
        like "#div+nav" as: "#div" "+n" "av".

        Test: fast/css/div_plus_nav_bug47971.html

        * css/maketokenizer:
        * css/tokenizer.flex:

2011-06-27  Sheriff Bot  <webkit.review.bot@gmail.com>

        Unreviewed, rolling out r89822.
        http://trac.webkit.org/changeset/89822
        https://bugs.webkit.org/show_bug.cgi?id=63461

        Broken builds (Requested by apavlov on #webkit).

        * inspector/Inspector.json:
        * inspector/InspectorCSSAgent.cpp:
        (WebCore::InspectorCSSAgent::getStylesForNode):
        * inspector/InspectorCSSAgent.h:
        * inspector/front-end/AuditRules.js:
        (WebInspector.AuditRules.ImageDimensionsRule.prototype.doRun.getStyles):
        * inspector/front-end/CSSStyleModel.js:
        (WebInspector.CSSStyleModel.prototype.getStylesAsync):
        * inspector/front-end/StylesSidebarPane.js:
        (WebInspector.StylesSidebarPane.prototype.update):

2011-06-27  Noel Gordon  <noel.gordon@gmail.com>

        Reviewed by Adam Roben.

        Send keypress events to windowless plugins on the windows port.
        https://bugs.webkit.org/show_bug.cgi?id=63144

        No new tests.  Covered by existing windowless plugin tests plugins/mouse-events.html
        and plugins/keyboard-events.html.  Both are not yet working as desired because focus
        events are not being fowarded to windowed plugins on the win port (bug 62375).  Test
        plugin logging on the win port was added in bug 61721.  New failing expectations for
        plugins/keyboard-events.html were subsequently added in bug 33973 so there's no need